public/css/site/styles.css
main {
    display: flex;
    flex-wrap: wrap;
    margin: 2em 0 0 0;
}

.fav-gallery-content {
    width: 55%; 
    height: 100%;
}

section {
    position: relative;
}

section#fav {
    align-items: stretch;
    display: flex;
    width: 100%;
    height: 100%;
}

.banners {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 45%;
    align-items: center;
    row-gap: 10px;
}

.banner {
    width: 100%;
    display: flex;
    justify-content: center;
}

.banner a {
    width: 90%;
}

.banner img {
    width: 100%;
    height: auto;
}

.features {
    width: 100%;
    position: relative;
}

.photo-dots {
    position: absolute;
    margin: 0 5px 0 5px;
    z-index: 999;
}

.photo-dots i {
    margin: 0 2px 0 2px;
    color: gray;
    cursor: pointer;
}

.photo-dots i[active="true"] {
    color: rgb(255, 255, 255);
}

.fa-circle::before {
    font-size: 10px;
}

.fa-circle:hover {
    color: #ffffffb5;
}

.arrows {
    position: absolute;
    display: flex;
    color: #9d9d9d;
    right: 0;
    flex-direction: column;
    margin: 5px;
    z-index: 999;
}

.arrows .fa-solid::before {
    font-size: 30px;
}

.arrows .fa-solid {
    cursor: pointer;
}

.arrows .fa-solid:hover {
    color: gray;
}

.photo-card {
    width: 100%;
    background-size: cover;
    height: 30em;
    position: relative;
}

.photo-card:hover {
    cursor: pointer;
}

.card {
    position: absolute;
    bottom: 0;
    margin: 12px;
}

.card-title {
    display: inline-block;
    background-color: #34345a9c;
    font-family: Oswald,arial,Georgia, serif;
    font-size: 22px;
    font-weight: bolder;
    color: #FFF;
    padding: 10px;
}

.card-text {
    background-color: #000000b3;
    color: #FFF !important;
    padding: 5px;
}

section#gallery {
    width: 100%;
    margin: 2em 0 2em 0;
}

.lab {
    color: #fff;
    border: 1px solid #34345a;
    border-width: 5px 0 0 0;
    cursor: pointer;
}

.lab a {
    background-color: #34345a;
    display: inline;
    padding: 5px 10px 5px 10px;
    margin: 0;
    font-weight: bolder;
    color: #FFF;
    text-transform: uppercase;
    text-decoration: none;
    font-family: Oswald,arial,Georgia, serif;
    font-size: 16px;
}

.lab a:hover {
    text-decoration: underline;
}

.images {
    display: flex;
    overflow: scroll hidden;
    height: 20em;
}

.images img {
    margin: 10px 10px 0 0;
}

.empty {
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
}

section#publications {
    margin: 2.5em 0 7em 0;
    position: relative;
    display: flex;
    flex-direction: column;
}

.publications {
    overflow: hidden scroll;
    margin: 2em 0 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    row-gap: 1rem;
    height: 35vw;
}

.card-publications {
    display: flex;
    flex-direction: row;
    flex: 0 0 calc((100% - 40px) / 3);
    position: relative;
    width: 23em;
    height: 18em;
    cursor: pointer;
    background-size: cover;
}

.view-more {
    position: absolute;
    right: 0;
    background-color: #e7e7e7;
    display: inline-block;
    font-weight: bolder;
    text-transform: uppercase;
    font-family: Oswald,arial,Georgia, serif;
    font-size: 10px;
    border-radius: 2px;
    margin: 10px 0 0 0;
    cursor: pointer;
    padding: 10px;
}

.view-more a {
    padding: 10px;
    margin: 0;
    color: #333;
    text-decoration: none;
}

.content-publications {
    position: absolute;
    bottom: 0;
    box-shadow: rgb(0 0 0 / 10%) 0px 1px 3px 0px, rgb(0 0 0 / 6%) 0px 1px 2px 0px;
    border-radius: 2px;
    background-color: #000000b5;
    font-weight: bolder;
    color: #fff;
}

.content-publications div {
    margin: 10px;
}

.title-content-publications {
    text-transform: capitalize;
}

@media (min-width: 320px) and (max-width: 730px) {
    section#fav {
        width: 100%;
    }

    .card-title {
        font-size: 15px;
    }

    section#gallery {
        width: 100%;
    }

    section#publications {
        margin: 3.5em 0 7em 0;
    }

  }


@media (max-width: 800px) {

    .fav-gallery-content {
        width: 100%;
        margin: 0 0 2em 0;
    }

    .banners {
        width: 100%;
    }

    .banner img {
        width: 100%;
    }

  }

  @media (max-width: 450px) {

    .banner {
        width: 100%;
    }
  }

  @media (min-width: 451px) and (max-width: 600px)  {

    .banner {
        width: 80%;
    }
  }

  @media (min-width: 601px) and (max-width: 800px)  {
    .banner {
        width: 70%;
    }
  }


  @media (min-width: 801px) and (max-width: 1200px)  {
    .banner {
        width: 90%;
    }

    .banner img {
        width: 100%;
    }
  }

  @media (pointer: coarse) { 
    .view-more, 
    .card-publications, 
    .lab, 
    .photo-card:hover, 
    .arrows .fa-solid, 
    .photo-dots i {
      cursor: none;
    }
  }

